--- a/module/influxdb.conf
+++ b/module/influxdb.conf
@@ -24,7 +24,7 @@
 [meta]
   # Where the metadata/raft database is stored
   #dir = "/var/lib/influxdb/meta"
-  dir = "C:/work/InfluxDB/meta"
+  dir = "####_HOME_PATH_####/meta"
 
   # Automatically create a default retention policy when creating a database.
   # retention-autocreate = true
@@ -44,11 +44,11 @@
 [data]
   # The directory where the TSM storage engine stores TSM files.
   #dir = "/var/lib/influxdb/data"
-  dir = "C:/work/InfluxDB/data"
+  dir = "####_HOME_PATH_####/data"
 
   # The directory where the TSM storage engine stores WAL files.
   #wal-dir = "/var/lib/influxdb/wal"
-  wal-dir = "C:/work/InfluxDB/wal"
+  wal-dir = "####_HOME_PATH_####/wal"
 
   # The amount of time that a write will wait before fsyncing.  A duration
   # greater than 0 can be used to batch up multiple fsync calls.  This is useful for slower
